--- a/invenio_news/templates/news/admin/edit.html
+++ b/invenio_news/templates/news/admin/edit.html
@@ -17,4 +17,4 @@
 # 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
 #}
 
-{%- extends "admin/insert_base.html" -%}
+{%- extends "news/admin/edit_base.html" -%}
