--- a/invenio_news/templates/news/admin/insert.html
+++ b/invenio_news/templates/news/admin/insert.html
@@ -17,4 +17,4 @@
 # 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
 #}
 
-{% extends "details_base.html" %}
+{%- extends "news/admin/insert_base.html" -%}
