--- a/invenio_news/templates/news/admin/update.html
+++ b/invenio_news/templates/news/admin/update.html
@@ -17,4 +17,4 @@
 # 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
 #}
 
-{%- extends "admin/Edit_base.html" -%}
+{%- extends "news/admin/update_base.html" -%}
