--- a/invenio_news/templates/news/details.html
+++ b/invenio_news/templates/news/details.html
@@ -17,4 +17,4 @@
 # 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
 #}
 
-{%- extends "admin/update_base.html" -%}
+{% extends "news/details_base.html" %}
